Bug: Landing Page CTA not visible

--- a/interview-helper/src/pages/landingPage/landingPage.css
+++ b/interview-helper/src/pages/landingPage/landingPage.css
@@ -15,9 +15,10 @@ header {
     display: flex;
     justify-content: center;
     align-content: center;
+    margin-top: 5px;
 }
 
-main {
+.landingPage--contianer > main {
     flex: 7;
     display: flex;
     flex-direction: column;
